--- a/static/css/generic/product_post_card.css
+++ b/static/css/generic/product_post_card.css
@@ -24,3 +24,13 @@ a {
 a:hover {
 	text-decoration: none;
 }
+
+.card-config {
+	margin: 15px;
+}
+
+.load-config {
+	display: block;
+	text-align: center;
+	font-size: 100px;
+}
