--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -59,8 +59,7 @@
 
                 <div class="list-group-item">
                     <div class="category-tags">
-                        <a class="btn btn-sm btn-outline-dark disabled" href="#">{{space.category}}</a>
-                        <div style="float: right;" id="pin-block">
+                        <div style="display: flex; justify-content: flex-end;" id="pin-block">
                             
                         </div>
                     </div><br>
@@ -79,20 +78,19 @@
             </div>
 
             <div class="col-lg-3">
+                <div class="list-group" style="color: white">
+                    <h4 class="list-group-item disable bg-dark">Activity</h4>
+                    <h6 class="list-group-item bg-danger">Rating: 396</h6>
+                    <h6 class="list-group-item bg-info">Reacts: 6580</h6>
+                    <h6 class="list-group-item bg-success">Favorite: 485</h6>
+                    <h6 class="list-group-item bg-primary">Posts: 35</h6>
+                </div>
+                <br><br>
                 <div class="list-group">
            
                     <a class="list-group-item" href="">Settings</a>
                     <a class="list-group-item" href="">Promotion</a>
                     <a class="list-group-item" href="">Change Ownership</a>
-                </div>
-                <br><br>
-                <div class="list-group">
-                    <h4 class="list-group-item disable bg-danger" style="color: white;">Trending</h4>
-                    <a class="list-group-item" href="">Apex</a>
-                    <a class="list-group-item" href="">Easy</a>
-                    <a class="list-group-item" href="">Lotto</a>
-                    <a class="list-group-item" href="">Easy</a>
-                    <a class="list-group-item" href="">Gear</a>
                 </div>
             </div>
         </div>
