--- a/templates/space/product/create.html
+++ b/templates/space/product/create.html
@@ -16,6 +16,7 @@
                 	{% csrf_token %}
                     {{ form.title }}
                     {{ form.description }}
+                    {{ form.category }}
                     {{ form.price }}
                     <div class="custom-file" style="margin-top: 5px; margin-bottom: 10px;">
                         {{ form.img1 }}
