--- a/templates/account/manage/pinned_product_list.html
+++ b/templates/account/manage/pinned_product_list.html
@@ -10,11 +10,13 @@
     
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-md-6">
+            <h5 style="text-align: center;" class="list-group-item list-group-item-dark">
+                Pinned Product List
+            </h5>
             <table class="table table-bordered table-secondary">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Product</th>
-                        <th>Time</th>
+                        <th>Product</th><th>Time</th>
                     </tr>
                 </thead>
                 <tbody id="table-row-block">
