account image live upload, setting variable load from environment

--- a/templates/account/manage/pinned_product_list.html
+++ b/templates/account/manage/pinned_product_list.html
@@ -11,7 +11,7 @@
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-md-6">
             <h5 style="text-align: center;" class="list-group-item list-group-item-dark">
-                Pinned Product List
+                Your pinned products
             </h5>
             <table class="table table-bordered table-secondary">
                 <thead class="thead-dark">
