--- a/templates/account/manage/favorite_space_list.html
+++ b/templates/account/manage/favorite_space_list.html
@@ -11,7 +11,7 @@
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-md-6">
             <h5 style="text-align: center;" class="list-group-item list-group-item-dark">
-                Favorite Space List
+                Your favorite space list
             </h5>
             <table class="table table-bordered table-secondary">
                 <thead class="thead-dark">
