--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="{% static 'res/icon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'lib/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css'%}">
 	{% block extra_head %}
 
@@ -34,7 +35,7 @@
                 </form>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/#trending">Trending</a>
+                        <a class="nav-link" href="/#trending">Trending <i class="fa fa-line-chart"></i></a>
                     </li>
                     {% if not request.user.is_authenticated %}
                         <li class="nav-item">
@@ -44,12 +45,21 @@
                             <a class="nav-link" href="/account/signup/">Sign Up</a>
                         </li>
                     {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/notification/">Notification
+                                {% if request.user.has_notification %}
+                                    <i class="fa fa-bell"></i>
+                                {% else %}
+                                    <i class="fa fa-bell-slash"></i>
+                                {% endif %}
+                            </a>
+                        </li>
                         {% if request.user.has_space %}
                             <li class="nav-item" style="margin-right: 10px;">
                                 <a class="nav-link" href="/space/product/create/">Product Create</a>
                             </li>
                         {% else %}
-                            <li class="nav-item">
+                            <li class="nav-item" style="margin-right: 10px;">
                                 <a class="nav-link" href="/space/create/">Space Create</a>
                             </li>
                         {% endif %}
@@ -58,7 +68,7 @@
                         <div class="nav-link btn-group">
                             <div class="dropdown-toggle" data-toggle="dropdown" 
                                 style="cursor: pointer; color: white;"> 
-                                <img  src="{% static 'res/tony.jpg' %}"  
+                                <img  src="{{request.user.thumbnail}}"
                                 onerror="this.src='https://i.postimg.cc/0N8mRzvP/user.png'" style="width: 25px; border-radius: 5px;">
                             </div>
                             <div class="dropdown-menu dropdown-menu-right" role="menu">
