password change and reset added

--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -17,8 +17,7 @@
                 </div>
                 <div class="list-group">
                     <a href="update/" class="list-group-item list-group-item-action">Update Info</a>
-                    <a href="#" class="list-group-item list-group-item-action">Change Password</a>
-                    <a href="#" class="list-group-item list-group-item-action">Deactivate Account</a>
+                    <a href="change-password/" class="list-group-item list-group-item-action">Change Password</a>
                 </div>
                 <br>
             </div>
