--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -76,10 +76,8 @@
                 </div>
                 <br><br>
                 <div class="list-group">
-           
                     <a class="list-group-item" href="update/">Update</a>
-                    <a class="list-group-item" href="">Promotion</a>
-                    <a class="list-group-item" href="">Change Ownership</a>
+                    <a class="list-group-item" href="#">Delete</a>
                 </div>
             </div>
         </div>
