--- a/templates/account/auth/change_password.html
+++ b/templates/account/auth/change_password.html
@@ -13,11 +13,11 @@
             <div class="col-md-6">
                 <form class="sign-in-form" method="POST">
                     {% csrf_token %}
-                	{{ form.phone }}
-                	{{ form.password }}
+                	{{ form.current_password }}
+                    {{ form.new_password }}
+                    {{ form.confirm_password }}
                     <input type="submit" value="Sign In" class="btn btn-success btn-block">
                 </form>
-                <a href="/account/password-reset/" class="list-group-item list-group-item-action">Forget Password?</a>
             </div>
             <div class="col-md-6"></div>
             
