--- a/templates/account/auth/change_password.html
+++ b/templates/account/auth/change_password.html
@@ -8,19 +8,17 @@
 
 
 {% block extra_content %}
-	<div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
-                <form class="sign-in-form" method="POST">
-                    {% csrf_token %}
-                	{{ form.current_password }}
-                    {{ form.new_password }}
-                    {{ form.confirm_password }}
-                    <input type="submit" value="Sign In" class="btn btn-success btn-block">
-                </form>
-            </div>
-            <div class="col-md-6"></div>
-            
+    
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="col-md-4 list-group-item" style="margin: 20px;">
+            <h6 align="center">Change Password</h6>
+            <form class="sign-in-form" method="POST">
+                {% csrf_token %}
+                {{ form.current_password }}
+                {{ form.new_password }}
+                {{ form.confirm_password }}
+                <input type="submit" value="Update Password" class="btn btn-success btn-block">
+            </form>
         </div>
     </div>
 {% endblock %}
